[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = { version = "0.4.13", features = ["util"] }
tower-http = { "version" = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
rust_search = "2.1.0"
fuzzy-matcher = "0.3.7"
sublime_fuzzy = "0.7.0"
