[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
tonic-build = "0.11"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [
    "macos-private-api",
    "protocol-asset",
    "devtools",
] }
# tauri-plugin-clipboard = { path = "../../../vendors/tauri-plugin-clipboard" }
tauri-plugin-clipboard = "2.0.4"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-upload = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-log = { version = "2.0.0-beta", features = ["colored"] }
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-os = "2.0.0-beta"
anyhow = "1.0.86"
mime = "0.3.17"
window-vibrancy = "0.5.0"
urlencoding = "2.1.3"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-jarvis = { path = "../../../packages/tauri-plugin-jarvis" }
chrono = "0.4.38"
log = "0.4"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta"
# tauri-plugin-updater = "2.0.0-beta"
