[package]
name = "desktop-v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.19", features = [] }
# tauri_plugin_jarvis = { path = "../../../packages/tauri_plugin_jarvis" }
tauri-plugin-clipboard = { path = "../../../vendors/tauri-plugin-clipboard" }
tauri-plugin-store = "2.0.0-beta.6"
applications = { path = "../../../vendors/applications-rs" }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-upload = "2.0.0-beta.5"
tauri-plugin-notification = "2.0.0-beta.5"
tauri-plugin-log = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-os = "2.0.0-beta.4"
axum-extra = "0.9.3"
axum = "0.7.5"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { "version" = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tokio = "1.37.0"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.4"
