[package]
name = "jarvis-desktop"
version = "0.0.0"
description = "Jarvis Desktop App"
authors = ["Huakun Shen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-notification = "2.0.0-beta.8"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-shellx = "2.0.7"
tauri-plugin-http = "2.0.0-beta.10"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-jarvis = { path = "../../../packages/tauri-plugin-jarvis" }
tauri-plugin-network = { workspace = true }
tauri-plugin-system-info = { path = "../../../vendors/tauri-plugin-system-info" }
tauri-plugin-clipboard = "2.0.4"
tauri-plugin-store = "2.0.0-beta.8"
tauri-plugin-log = "2.0.0-beta.6"
anyhow = { workspace = true }
tokio = { workspace = true }
mdns-sd = { workspace = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.6"
tauri-plugin-updater = "2.0.0-beta.8"
