[package]
name = "kunkun-desktop"
version = "0.0.0"
description = "Kunkun Desktop App"
authors = ["Huakun Shen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
    "protocol-asset",
    "image-png",
    "image-ico",
    "tray-icon",
    "devtools",
] }
tauri-plugin-shell = "2.0.0-beta"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
mdns-sd = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
urlencoding = "2.1.3"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-shellx = "2.0.8"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-notification = "2.0.0-beta.10"
tauri-plugin-os = "2.0.0-beta.8"
tauri-plugin-http = "2.0.0-beta.12"
tauri-plugin-upload = "2.0.0-beta.9"
tauri-plugin-jarvis = { path = "../../../packages/tauri-plugin-jarvis" }
tauri-plugin-network = { workspace = true }
tauri-plugin-system-info = { path = "../../../vendors/tauri-plugin-system-info" }
tauri-plugin-clipboard = { workspace = true }
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-log = { version = "2.0.0-beta.8", features = ["colored"] }
zip = "2.1.3"


[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.8"
tauri-plugin-updater = "2.0.0-beta.10"
