[package]
name = "nuxt-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-notification = "2.0.0-beta.8"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-shellx = "2.0.7"
tauri-plugin-http = "2.0.0-beta.10"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-jarvis = { path = "../../../packages/tauri-plugin-jarvis" }
tauri-plugin-network = { path = "../../../vendors/tauri-plugin-network" }
tauri-plugin-system-info = { path = "../../../vendors/tauri-plugin-system-info" }
tauri-plugin-clipboard = "2.0.4"

